--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,31 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div>
+            <h1>Conoce el mundo de los Peaky Blinders</h1>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/banner.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/banner2.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/banner3.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">anterior</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">siguiente</span>
+                </button>
+              </div>
+        </div>
+        <div class="columna">
+            <section class="Sintesis">
+                <h2>¿De que trata la serie?</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius nesciunt exercitationem, nemo laborum tempore repellendus a perspiciatis dolorem aut ipsa. Quibusdam ullam est tempore ducimus praesentium accusamus repudiandae necessitatibus ipsam Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid similique, magnam porro at ipsam incidunt esse sint natus debitis deleniti. Fugiat recusandae exercitationem voluptatum quis sunt repellat, suscipit soluta consequatur.</p>
+            </section>
+
+        </div>
