--- a/views/contacto.hbs
+++ b/views/contacto.hbs
@@ -1,27 +1,28 @@
 <div class="contacto">
         <div>
             <h2>Contactenos</h2>
-            <form action="" method="" class="formulario">
+            <form action="/contacto" method="post" class="formulario">
                 <P>
                     <label for="">Nombre</label>
-                    <input type="text">
+                    <input type="text" name="nombre">
                 </P>
                 <p>
                     <label for="">Email</label>
-                    <input type="text">
+                    <input type="text" name="email">
                 </p>
                 <p>
                     <label for="">telefono</label>
-                    <input type="text">
+                    <input type="text" name="telefono">
                 </p>
                 <p>
                     <label for="">mensaje</label>
-                    <textarea name="" id=""></textarea>
+                    <textarea name="comentarios" id=""></textarea>
                 </p>
                 <p>
                     <input type="submit" value="Enviar">
                 </p>
             </form>
+                <p>{{message}}</p>
         </div>
         <div class="datos">
             <h2>otras formas de contacto</h2>
