funcionamiento del login

--- a/views/admin/login.hbs
+++ b/views/admin/login.hbs
@@ -1,17 +1,21 @@
 <div class="container margenes">
     <div class="rows">
         <div class="col">
-            <form action="">
+            <form action="/admin/login" method="post">
                 <div class="mb-3">
-  <input type="text" class="form-control" placeholder="usuario">
+  <input type="text" class="form-control" placeholder="usuario" name="usuario">
 </div>
 <div class="mb-3">
-   <input type="password" class="form-control" placeholder="contraseña">
+   <input type="password" class="form-control" placeholder="contraseña" name="password">
 </div>
 <div class="col-auto">
-    <button type="button" class="btn btn-secondary btn-lg">ingresar</button>
+    <button type="submit" class="btn btn-secondary btn-lg">ingresar</button>
 </div>
             </form>
+            {{#if error}}
+            <p>usuario y/o contraseña incorrectos</p>
+            {{/if}}
+
         </div>
     </div>
 </div>
