--- a/views/admin/inicio.hbs
+++ b/views/admin/inicio.hbs
@@ -1,2 +1,42 @@
-<h1>soy la pagina de inicio</h1>
-<h2>bienvenido {{persona}}</h2>
+<div class="container margenes">
+    <div class="row">
+        <div class="col">
+         <p class="text-end"> bienvenido {{persona}} <a href="" class="btn btn-primary">cerrar sesion <i class="fa-solid fa-right-from-bracket"></i></a></p>
+        </div>
+    </div>
+</div>
+    <div class="row">
+        <div class="col-7">
+            <h2>listado de novedades</h2>
+    </div>
+    <div class="col-5 text-end">
+        <a href="" class="btn btn-secondary"><i class="fa-solid fa-plus"></i> nuevo</a>
+    </div>
+</div>
+
+    <div class="row">
+        <div class="col">
+            <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+  </tbody>
+</table>
+
+        </div>
+    </div>
+
+
+
