--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,6 +24,7 @@
             <li><a class="{{#if ispersonajes}}activo {{/if}}" href="/personajes">personajes</a></li>
             <li><a class="{{#if isgaleria}}activo {{/if}}" href="/galeria">galeria</a></li>
             <li><a class="{{#if istemporadas}}activo {{/if}}" href="/temporadas">temporadas</a></li>
+            <li><a class="{{#if isnovedades}}activo {{/if}}" href="/novedades">novedades</a></li>
             <li><a class="{{#if iscontacto}}activo {{/if}}" href="/contacto">contacto</a></li>
             
         </ul>
@@ -35,10 +36,10 @@
         <p> Diseñado por Ignacio - 2022</p>
         <div class="redes">
             <ul>
-               <li> <a href="https://www.facebook.com/PeakyBlinders"><img src="images/iconos para header/facebook.png" alt="facebook" width="45" height="45"></a></li>
-                <li> <a href="https://www.instagram.com/peakyblindersofficial/"><img src="images/iconos para header/instagram-removebg-preview.png" alt="facebook" width="45" height="45"></a></li>
-                <li> <a href="https://twitter.com/ThePeakyBlinder"><img src="images/iconos para header/twitter-removebg-preview.png" alt="facebook" width="45" height="45"></a></li>
-                <li> <a href="https://www.whatsapp.com/"><img src="images/iconos para header/WhatsApp-removebg-preview.png " alt="facebook" width="45" height="45"></a></li>
+               <li> <a href="https://www.facebook.com/PeakyBlinders"><img src="images/iconos para header/facebook2.png" alt="facebook" width="45" height="45"></a></li>
+                <li> <a href="https://www.instagram.com/peakyblindersofficial/"><img src="images/iconos para header/instagram-removebg-preview2.png" alt="facebook" width="45" height="45"></a></li>
+                <li> <a href="https://twitter.com/ThePeakyBlinder"><img src="images/iconos para header/twitter-removebg-preview2.png" alt="facebook" width="45" height="45"></a></li>
+                <li> <a href="https://www.whatsapp.com/"><img src="images/iconos para header/WhatsApp-removebg-preview2.png " alt="facebook" width="45" height="45"></a></li>
             </ul>
         </div>
     </footer>
