--- a/views/personajes.hbs
+++ b/views/personajes.hbs
@@ -1,7 +1,9 @@
- <section class="origen">
-            <h2>Origen</h2>
-            <img src="images/small-heath.jpg" alt="" height="300" width="955">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi obcaecati deserunt sunt, ratione molestias deleniti, fugit iure itaque dolore mollitia odio possimus quam voluptatibus odit enim cum iusto magni facilis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi in mollitia et unde, sed voluptas asperiores ea blanditiis accusantium ut reiciendis quae eius! Quasi fugit qui et tenetur, perferendis iste.</p>
+        <section class="origen">
+            <h2>origenes</h2>
+            <img src="images/small-heath.jpg">
+            <img src="images/garrison.jpg" alt="">
+            <img src="images/casa.jpg" alt="">
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi obcaecati deserunt sunt, ratione molestias deleniti, fugit iure itaque dolore mollitia odio possimus quam voluptatibus odit enim cum iusto magni facilis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi in mollitia et unde, sed voluptas asperiores ea blanditiis accusantium ut reiciendis quae eius! Quasi fugit qui et tenetur, perferendis iste.</p>
         </section>
         <section class="personajes">
             <h2>personajes principales</h2>
