--- a/public/stylesheets/bcs.css
+++ b/public/stylesheets/bcs.css
@@ -14,8 +14,12 @@ header{
     display: flex;
 }
 
-.sintesis h2{
+.columna .Sintesis h2{
     margin-top: 20px;
+}
+.columna .Sintesis p{
+    margin-top: 20px;
+    width: 950px;
 }
 
 .persona h5{
@@ -77,15 +81,22 @@ footer{
     margin-top: 20px;
     display: flex;
     align-items: center;
-    height: 90px;
+    height: 80px;
 }
 
 footer p{
     margin-left: 180px;
+    margin-top: 20px;
 }
 
 .redes ul li{
     padding: 20px;
+}
+
+.redes ul li img{
+   
+    color: #999;
+    margin-bottom: 7px;
 }
 
 .holder{
@@ -134,9 +145,11 @@ main div h1{
     color: white;
 }
 
+
+
 .datos h2{
-    margin-right: 190px;
-    color: white;
+    margin-right: 120px;
+    color: white;   
 }
 
 .contacto{
@@ -161,8 +174,9 @@ main div h1{
 .datos ul li{
     font-size: 17px;
     padding: 10px;
-    margin-top: 30px;
+    margin-top: 20px;
     color: white;
+    margin-left: 50px;
 }
 
 .formulario p{
@@ -216,23 +230,36 @@ main div h1{
 
 .origen h2{
     color: white;
+    margin-bottom: 17px;
 }
 
 .personajes h2{
     color: white;
+    margin-top: 30px;
 }
 
 .origen p{
     font-size: 15px;
     color: white;
+    margin-top: 20px;  
 }
+
+.origen img{
+    height: 200px;
+    width:300px;
+    align-items: center;
+    margin-right: 17px;
+}
+
+
 
 .persona{
     border: 1px solid black;
     border-radius: 3px;
     width: 20%;
-
 }
+
+
 
 .personas{
     display: flex;
@@ -241,7 +268,12 @@ main div h1{
 
 .persona img{
     width: 190px;
+    height: 300px;
+    margin: 0 auto;
+    border-bottom: 1px solid black;
 }
+
+
 
 .persona h5,h6{
     text-align: center;
@@ -251,7 +283,7 @@ main div h1{
 
 .persona h5{
     font-size: 14px;
-
+    padding-top: 6px;
 }
 
 .persona h6{
@@ -339,6 +371,24 @@ main div h1{
 .info img:hover{
     transform: translateY(-3%);
 
+}
+
+/*inicio novedades*/
+
+.text h2{
+    color: white;
+    text-align: center;
+}
+
+.text h3,h4{
+    color: white;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.text hr{
+    color: white;
+    
 }
 
 
