--- a/views/admin/novedades.hbs
+++ b/views/admin/novedades.hbs
@@ -31,7 +31,7 @@
       <td>{{titulo}}</td>
       <td class="text-end">
         <a href=""><i class="fa-solid fa-pen-to-square"></i></a>
-        <a href=""><i class="fa-solid fa-trash-can"></i></a>
+        <a href="/admin/novedades/eliminar/{{id}}"><i class="fa-solid fa-trash-can"></i></a>
       </td>
     </tr>
     {{/each}}
