--- a/views/admin/novedades.hbs
+++ b/views/admin/novedades.hbs
@@ -30,7 +30,7 @@
       <th scope="row">{{id}}</th>
       <td>{{titulo}}</td>
       <td class="text-end">
-        <a href=""><i class="fa-solid fa-pen-to-square"></i></a>
+        <a href="/admin/novedades/modificar/{{id}}"><i class="fa-solid fa-pen-to-square"></i></a>
         <a href="/admin/novedades/eliminar/{{id}}"><i class="fa-solid fa-trash-can"></i></a>
       </td>
     </tr>
