--- a/views/admin/novedades.hbs
+++ b/views/admin/novedades.hbs
@@ -1,7 +1,7 @@
 <div class="container margenes">
     <div class="row">
         <div class="col">
-         <p class="text-end"> bienvenido {{persona}} <a href="" class="btn btn-primary">cerrar sesion <i class="fa-solid fa-right-from-bracket"></i></a></p>
+         <p class="text-end"> bienvenido {{persona}} <a href="/admin/login/logout" class="btn btn-primary">cerrar sesion <i class="fa-solid fa-right-from-bracket"></i></a></p>
         </div>
     </div>
 </div>
