--- a/views/contacto.hbs
+++ b/views/contacto.hbs
@@ -22,7 +22,7 @@
                     <input type="submit" value="Enviar">
                 </p>
             </form>
-                <p>{{message}}</p>
+                <p class="mensajecontacto">{{message}}</p>
         </div>
         <div class="datos">
             <h2>otras formas de contacto</h2>
