--- a/views/galeria.hbs
+++ b/views/galeria.hbs
@@ -1,5 +1,5 @@
   <div class="galeria">
-            <h2>Galeria de los Peaky Blinders</h2>
+            <h2>Galeria</h2>
         <div>
             <img src="images/galeria/arthur.jpg" alt="">
             <img src="images/galeria/hermanos.jpg" alt="">
