--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <div>
+        <div class="logores">
             <img src="images/logopeaky4.png" alt="logo" width="500" height="180">
         </div>
     </header>
@@ -42,7 +42,7 @@
                 <li> <a href="https://www.whatsapp.com/"><img src="images/iconos para header/WhatsApp-removebg-preview2.png " alt="facebook" width="45" height="45"></a></li>
             </ul>
         </div>
-    </footer>
+    </footer class="holder">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script> 
 </body>
 </html>
