--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -1,3 +1,34 @@
 .margenes{
     margin-top: 90px;
 }
+
+.col-auto button{
+    height: 42px;
+    align-items: center;
+    text-align: center;
+}
+
+.formulario4{
+    font-style: italic;
+    margin-top: 20px;
+}
+
+.row .col-7 h2{
+    color: white;
+}
+
+.blanco{
+    color: white;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.form-label{
+    color: white;
+}
+
+.mensaje5{
+    margin-top: 30px;
+    font-style: italic;
+}
+
