--- a/public/stylesheets/bcs.css
+++ b/public/stylesheets/bcs.css
@@ -16,10 +16,14 @@ header{
 
 .columna .Sintesis h2{
     margin-top: 20px;
+    font-size: 26px;
 }
+
+
 .columna .Sintesis p{
     margin-top: 20px;
     width: 950px;
+    font-size: 16px;
 }
 
 .persona h5{
@@ -138,6 +142,12 @@ main div h1{
 /*FIN INICIO*/
 
 /*CONTACTO*/
+
+.mensajecontacto{
+    font-style: italic;
+    color: white;
+    margin-left: 135px;
+}
 
 .contacto div h2{
     text-align: center;
@@ -378,9 +388,10 @@ main div h1{
 .text h2{
     color: white;
     text-align: center;
+    margin-bottom: 40px ;
 }
 
-.text h3,h4{
+/* .text h3,h4{
     color: white;
     text-align: center;
     margin-top: 30px;
@@ -389,6 +400,43 @@ main div h1{
 .text hr{
     color: white;
     
+} */
+
+/*inicio novedades*/
+
+
+
+.novedades h3{
+    text-align: left;
+    font-size: 27px;
+    color: white;
+    font-style: italic;
+    
 }
+
+.novedades h4{
+    font-size: 20px;
+    margin-bottom: 30px;
+    color: white;
+    font-style: italic;
+}
+
+.novedades p{
+    font-size: 14px;
+    color: white;
+}
+
+.novedades hr{
+    color: white;
+}
+
+@media screen and (max-width:550px){
+    nav{
+        overflow-x: scroll;
+    }
+
+
+}
+
 
 
