--- a/views/admin/login.hbs
+++ b/views/admin/login.hbs
@@ -1,7 +1,7 @@
 <div class="container margenes">
     <div class="rows">
         <div class="col">
-            <form action="/admin/login" method="post">
+            <form action="/admin/login" method="post" class="formulario2">
                 <div class="mb-3">
   <input type="text" class="form-control" placeholder="usuario" name="usuario">
 </div>
@@ -13,7 +13,7 @@
 </div>
             </form>
             {{#if error}}
-            <p>usuario y/o contraseña incorrectos</p>
+            <p class="formulario4">usuario y/o contraseña incorrectos</p>
             {{/if}}
 
         </div>
